<resources>
    <string name="app_name">BookCommunity</string>
    <string name="author">Author</string>
    <string name="isbn">ISBN (digits only, no dashes or dots)</string>
    <string name="isbn_or_title_author">Enter either 1. ISBN (preferred) or 2. title and author.</string>
    <string name="or">OR</string>
    <string name="scan_barcode">Scan ISBN barcode</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
</resources>
